fix css formating

--- a/Adrian Szmajewski CV/Adrian Szmajewski.css
+++ b/Adrian Szmajewski CV/Adrian Szmajewski.css
@@ -236,7 +236,7 @@ body {
 
 .linkedin::before,
 .facebook::before,
-.github::before, {
+.github::before {
     content: '';
     display: block;
     width: 24px;
