--- a/Adrian Szmajewski CV/Adrian_Szmajewski.css
+++ b/Adrian Szmajewski CV/Adrian_Szmajewski.css
@@ -284,3 +284,27 @@ body {
   .center-content {
 	text-align: center;
 }
+
+.map-container {
+    position: relative; /* Allows positioning of the label relative to the map */
+    width: 600px; /* Map width */
+    height: 450px; /* Map height */
+    margin: 20px auto; /* Centering the map */
+}
+
+.map {
+    width: 100%;
+    height: 100%;
+    border: 0; /* Optional: remove border */
+}
+
+.label {
+    position: absolute;
+    top: 10px; /* Label height */
+    left: 20px;/* Distance from the left */
+    background-color: rgba(255, 255, 255, 0.7); /* Transparent background for better visibility */
+    padding: 5px 10px; /* Padding for the label */
+    border-radius: 5px; /* Rounded corners */
+    font-size: 16px; /* Font size */
+    color: #333; /* Text color */
+}
